--- a/css/jump_game.css
+++ b/css/jump_game.css
@@ -7,7 +7,7 @@
     height: 200px;
     border: 1px solid black;
     margin: auto;
-    background-image: url("jump_img/background.png");
+    background-image: url("../jump_img/background.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
