--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ nav li a:hover {
 
 /* start of title style*/
 #img {
-    background: url("images/background_ucdavis.jpg") top  center no-repeat;
+    background: URL("../images/background_ucdavis.jpg") top  center no-repeat;
     height:  800px;
     background-size: cover;
     /*margin-bottom: 75px;*/
